# mail-archiver

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/plans/: fix-critical-issues.md  mail-archive-implementation.md
migrations/: 20240101000000_create_schema.sql
src/: config.rs  crypto.rs  main.rs
src/api/: auth.rs  auth_middleware.rs  mod.rs  routes.rs
src/db/: mod.rs
src/embed/: mod.rs
src/imap/: client.rs  mod.rs  split.rs  sync_engine.rs
src/mail/: language.rs  parser.rs
src/storage/: attachment.rs  mod.rs  tags.rs
static/: style.css
templates/: base.html  search.html  stats.html
